# sphur

./: .asm-lsp.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  flake.nix  profile.sh
.cargo/: config.toml
.github/workflows/: release.yaml  tests.yaml  unit_test.yaml  unit_tests.yaml
asm/: linux_a64.s  linux_x64.asm  macos_a64.s  macos_x64.asm  simd_a64.s  simd_x64.asm  win_a64.s  win_x64.asm  x64_simd.asm
benches/: plot_distribution.py
benchmarks/: basic.rs  bench.rs  rand.rs
clib/: Makefile  make_a64  make_x64
clib/asm/: linux_x86.asm
clib/bench/: bench.c
clib/examples/: default.c  example.c  init_seeded.c
clib/include/: sphur.h
clib/src/: sphur.c
clib/tests/: init.c  rand.c  simd_test.c  test.c  test_add_one.c  utils.c
examples/: profile.rs  profile_u32.rs  profile_u64.rs  randomness.rs
jlib/: binding.c  binding.gyp  index.js  package-lock.json  package.json
randomness/: Cargo.toml
rlib/: Cargo.toml  build.rs
rlib/benchmarks/: bench.rs
rlib/src/: lib.rs
rlib/wrapper/: sphur.h  wrapper.c  wrapper.h
scripts/: analyze.py  cpu.sh  profile.sh  release.sh
src/: lib.rs  sfmt.rs  simd.rs  state.rs
src/engine/: mod.rs  neon.rs  sse.rs  sse2.rs
