[package]
name = "sphur"
version = "0.2.0"
edition = "2024"
description = "Sphūr (स्फुर्) is a SIMD™ accelerated PRNG based on the SFMT algorithm."
license = "Apache-2.0"
repository = "https://github.com/frozen-lab/sphur"
keywords = ["prng", "simd", "random", "rng", "entropy"]
exclude = ["flake.nix", "flake.lock", "assets/"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
lto = "off"
opt-level = 2
codegen-units = 1
