[package]
name = "sphur"
version = "0.3.0"
edition = "2024"
description = "Sphūr (स्फुर्) is a SIMD™ accelerated PRNG library."
license = "Apache-2.0"
repository = "https://github.com/frozen-lab/sphur"
readme = "README.md"
keywords = ["prng", "simd", "random", "rng", "entropy"]
categories = ["algorithms", "math"]
exclude = ["flake.nix", "flake.lock", "assets/", "profile.sh", ".local/", "scripts/", "randomness/"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
lto = "off"
opt-level = 2
codegen-units = 1
debug-assertions = false
overflow-checks = false
strip = "none"

[[bench]]
name = "basic"
path = "benchmarks/basic.rs"
harness = false
